==> KitSprout/MicroMultimeter/Software/uM_ModuleHAL_OLED-WF/Program/modules/module_ssd1331.c <==
#include "drivers\stm32f3_system.h"
#include "drivers\stm32f3_spi.h"
#include "algorithms\algorithm_string.h"
#include "module_ssd1331.h"
#define OLED_SPIx                   SPI3
#define OLED_CLK_ENABLE()           __HAL_RCC_SPI3_CLK_ENABLE()
#define OLED_DC_PIN                 GPIO_PIN_4
#define OLED_DC_GPIO_PORT           GPIOB
#define OLED_DC_GPIO_CLK_ENABLE()   __HAL_RCC_GPIOB_CLK_ENABLE()
#define OLED_DC_H()                 __GPIO_SET(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_DC_L()                 __GPIO_RST(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_RST_PIN                GPIO_PIN_6
#define OLED_RST_GPIO_PORT          GPIOB
#define OLED_RST_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOB_CLK_ENABLE()
#define OLED_RST_H()                __GPIO_SET(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_RST_L()                __GPIO_RST(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_CST_PIN                GPIO_PIN_15
#define OLED_CST_GPIO_PORT          GPIOA
#define OLED_CST_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOA_CLK_ENABLE()
#define OLED_CST_H()                __GPIO_SET(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_CST_L()                __GPIO_RST(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_SCK_PIN                GPIO_PIN_3
#define OLED_SCK_GPIO_PORT          GPIOB
#define OLED_SCK_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOB_CLK_ENABLE()
#define OLED_SCK_AF                 GPIO_AF6_SPI3
#define OLED_SDI_PIN                GPIO_PIN_5
#define OLED_SDI_GPIO_PORT          GPIOB

void SSD1331_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;
  SPI_HandleTypeDef SPI_HandleStruct;

  /* SPI Clk ******************************************************************/
  OLED_CLK_ENABLE();
  OLED_DC_GPIO_CLK_ENABLE();
  OLED_RST_GPIO_CLK_ENABLE();
  OLED_CST_GPIO_CLK_ENABLE();
  OLED_SCK_GPIO_CLK_ENABLE();
  OLED_SDI_GPIO_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = OLED_CST_PIN;
  HAL_GPIO_Init(OLED_CST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = OLED_DC_PIN;
  HAL_GPIO_Init(OLED_DC_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = OLED_RST_PIN;
  HAL_GPIO_Init(OLED_RST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;

  GPIO_InitStruct.Pin       = OLED_SCK_PIN;
  GPIO_InitStruct.Alternate = OLED_SCK_AF;
  HAL_GPIO_Init(OLED_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = OLED_SDI_PIN;
  GPIO_InitStruct.Alternate = OLED_SDI_AF;
  HAL_GPIO_Init(OLED_SDI_GPIO_PORT, &GPIO_InitStruct);

  OLED_CST_H();  // low enable

  /* SPI Init ****************************************************************/
  SPI_HandleStruct.Instance               = OLED_SPIx;
  SPI_HandleStruct.Init.Mode              = SPI_MODE_MASTER;
  SPI_HandleStruct.Init.Direction         = SPI_DIRECTION_2LINES;
  SPI_HandleStruct.Init.DataSize          = SPI_DATASIZE_8BIT;
  SPI_HandleStruct.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  SPI_HandleStruct.Init.CLKPhase          = SPI_PHASE_2EDGE;
  SPI_HandleStruct.Init.NSS               = SPI_NSS_SOFT;
  SPI_HandleStruct.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
  SPI_HandleStruct.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  SPI_HandleStruct.Init.TIMode            = SPI_TIMODE_DISABLE;
  SPI_HandleStruct.Init.CRCCalculation    = SPI_CRCCALCULATION_ENABLE;
  SPI_HandleStruct.Init.CRCPolynomial     = 7;
  HAL_SPI_Init(&SPI_HandleStruct);

  __HAL_SPI_ENABLE(&SPI_HandleStruct);
}

static void OLED_WriteCmd( uint8_t writeCmd )
{
  OLED_CST_L();
  OLED_DC_L();
  SPI_RW8(OLED_SPIx, writeCmd);
  OLED_CST_H();
}

void OLED_SetWindow( uint8_t posX1, uint8_t posY1, uint8_t posX2, uint8_t posY2 )
{
  OLED_WriteCmd(0x15);
  OLED_WriteCmd(posX1);
  OLED_WriteCmd(posX2);
  OLED_WriteCmd(0x75);
  OLED_WriteCmd(posY1);
  OLED_WriteCmd(posY2);
}

void OLED_DrawPixel( uint8_t posX, uint8_t posY, uint16_t color )
{
  OLED_SetWindow(posX, posY, posX, posY);
  OLED_WriteColor(color);
}

void OLED_DrawLine( uint8_t posX1, uint8_t posY1, uint8_t posX2, uint8_t posY2, uint16_t color )
{
  OLED_WriteCmd(0x21);
  OLED_WriteCmd(posX1);
  OLED_WriteCmd(posY1);
  OLED_WriteCmd(posX2);
  OLED_WriteCmd(posY2);
  OLED_WriteCmd(RGB565_R(color));
  OLED_WriteCmd(RGB565_G(color));
  OLED_WriteCmd(RGB565_B(color));
}

void OLED_DrawLineX( uint8_t posX, uint8_t posY, uint8_t length, uint16_t color )
{
  OLED_SetWindow(posX, posY, posX + length - 1, posY);

  while(length--)
    OLED_WriteColor(color);
}

void OLED_DrawLineY( uint8_t posX, uint8_t posY, uint8_t length, uint16_t color )
{
  OLED_SetWindow(posX, posY, posX, posY + length - 1);

  while(length--)
    OLED_WriteColor(color);
}

void OLED_DrawCircle( uint8_t posX, uint8_t posY, uint8_t radius, uint16_t color )
{
  int32_t D;
  uint32_t curX;
  uint32_t curY;

  D = 3 - (radius << 1);
  curX = 0;
  curY = radius;

  while(curX <= curY) {
    OLED_DrawPixel(posX + curX, posY - curY, color);
    OLED_DrawPixel(posX - curX, posY - curY, color);
    OLED_DrawPixel(posX + curY, posY - curX, color);
    OLED_DrawPixel(posX - curY, posY - curX, color);
    OLED_DrawPixel(posX + curX, posY + curY, color);
    OLED_DrawPixel(posX - curX, posY + curY, color);
    OLED_DrawPixel(posX + curY, posY + curX, color);
    OLED_DrawPixel(posX - curY, posY + curX, color);

    if(D < 0) {
      D += (curX << 2) + 6;
    }
    else {
      D += ((curX - curY) << 2) + 10;
      curY--;
    }
    curX++;
  }
}

void OLED_PutChar( uint8_t posX, uint8_t posY, uint8_t word_h, uint8_t word_w, const uint8_t *pWord, uint16_t fontColor, uint16_t backColor )
{
  uint8_t tmp = 0;

  for(uint8_t i = 0; i < word_h; i++) {
    tmp = pWord[i];
    for(uint8_t j = 0; j < word_w; j++) {
      if(((tmp >> (word_w - 1 - j)) & 0x01) == 0x01)
        OLED_DrawPixel(posX + j, posY + i, fontColor);
      else
        OLED_DrawPixel(posX + j, posY + i, backColor);
    }
  }
}

void OLED_PutChar16( uint8_t posX, uint8_t posY, uint8_t word_h, uint8_t word_w, const uint16_t *pWord, uint16_t fontColor, uint16_t backColor )
{
  uint16_t tmp = 0;

  for(uint8_t i = 0; i < word_h; i++) {
    tmp = pWord[i];
    for(uint8_t j = 0; j < word_w; j++) {
      if(((tmp >> (word_w - 1 - j)) & 0x0001) == 0x0001)
        OLED_DrawPixel(posX + j, posY + i, fontColor);
      else
        OLED_DrawPixel(posX + j, posY + i, backColor);
    }
  }
}

void OLED_PutChar32( uint8_t posX, uint8_t posY, uint8_t word_h, uint8_t word_w, const uint32_t *pWord, uint16_t fontColor, uint16_t backColor )
{
  uint32_t tmp = 0;

  for(uint8_t i = 0; i < word_h; i++) {
    tmp = pWord[i];
    for(uint8_t j = 0; j < word_w; j++) {
      if(((tmp >> (word_w - 1 - j)) & 0x00000001) == 0x00000001)
        OLED_DrawPixel(posX + j, posY + i, fontColor);
      else
        OLED_DrawPixel(posX + j, posY + i, backColor);
    }
  }
}

void OLED_PutChar_5x7( uint8_t posX, uint8_t posY, int8_t word, uint16_t fontColor, uint16_t backColor )
{
  uint8_t tmp = 0;

  for(uint8_t i = 0; i < 5; i++) {
    tmp = ASCII_NUM_5x7[word - 32][i];
    for(uint8_t j = 0; j < 7; j++) {
      if(((tmp >> (6 - j)) & 0x01) == 0x01)
        OLED_DrawPixel(posX + i, posY + 7 - j, fontColor);
      else
        OLED_DrawPixel(posX + i, posY + 7 - j, backColor);
    }
  }
}

void OLED_PutStr( uint8_t posX, uint8_t posY, char *pString, uint16_t fontColor, uint16_t backColor )
{
  uint16_t offsetX = 0;

  while(*pString) {
    OLED_PutChar(posX + offsetX, posY, 12, 6, ASCII_12x6[*pString], fontColor, backColor);
    pString++;
    offsetX += 8;
  }
}

void OLED_PutStr_5x7( uint8_t posX, uint8_t posY, char *pString, uint16_t fontColor, uint16_t backColor )
{
  uint16_t offsetX = 0;

  while(*pString) {
    OLED_PutChar_5x7(posX + offsetX, posY, *pString, fontColor, backColor);
    pString++;
    offsetX += 6;
  }
}

void OLED_PutNum( uint8_t posX, uint8_t posY, StringType type, uint8_t lens, int32_t number, uint16_t fontColor, uint16_t backColor )
{
  char strBuf[16] = {0};

  num2Str(type, lens, strBuf, number);
  OLED_PutStr_5x7(posX, posY, strBuf, fontColor, backColor);
}
