==> KitSprout/MicroMultimeter/Software/uMultimeter/Program/Modules/module_ssd1331.c <==
#include "stm32f1_system.h"
#include "stm32f1_spi.h"
#include "module_ssd1331.h"
#include "algorithm_string.h"
#define OLED_SPIx            SPI1
#define OLED_SPIx_CLK        RCC_APB2Periph_SPI1
#define OLED_DC_PIN          GPIO_Pin_1
#define OLED_DC_GPIO_PORT    GPIOA
#define OLED_DC_GPIO_CLK     RCC_APB2Periph_GPIOA
#define OLED_DC_H            GPIO_SetBits(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_DC_L            GPIO_ResetBits(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_RST_PIN         GPIO_Pin_2
#define OLED_RST_GPIO_PORT   GPIOA
#define OLED_RST_GPIO_CLK    RCC_APB2Periph_GPIOA
#define OLED_RST_H           GPIO_SetBits(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_RST_L           GPIO_ResetBits(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_CST_PIN         GPIO_Pin_4
#define OLED_CST_GPIO_PORT   GPIOA
#define OLED_CST_GPIO_CLK    RCC_APB2Periph_GPIOA
#define OLED_CST_H           GPIO_SetBits(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_CST_L           GPIO_ResetBits(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_SCK_PIN         GPIO_Pin_5
#define OLED_SCK_GPIO_PORT   GPIOA
#define OLED_SCK_GPIO_CLK    RCC_APB2Periph_GPIOA
#define OLED_SDI_PIN         GPIO_Pin_7
#define OLED_SDI_GPIO_PORT   GPIOA
#define OLED_SDI_GPIO_CLK    RCC_APB2Periph_GPIOA

void SSD1331_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;
  SPI_InitTypeDef SPI_InitStruct;

  /* SPI Clk Init *************************************************************/
  RCC_APB2PeriphClockCmd(OLED_RST_GPIO_CLK | OLED_CST_GPIO_CLK | OLED_DC_GPIO_CLK  | 
                         OLED_SCK_GPIO_CLK | OLED_SDI_GPIO_CLK | OLED_SPIx_CLK     |
                         RCC_APB2Periph_AFIO, ENABLE);

  /* DC PB10  */
  GPIO_InitStruct.GPIO_Pin = OLED_DC_PIN;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(OLED_DC_GPIO_PORT, &GPIO_InitStruct);
  /* RST PB11 */
  GPIO_InitStruct.GPIO_Pin = OLED_RST_PIN;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(OLED_RST_GPIO_PORT, &GPIO_InitStruct);
  /* CST PB12  */
  GPIO_InitStruct.GPIO_Pin = OLED_CST_PIN;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(OLED_CST_GPIO_PORT, &GPIO_InitStruct);
  /* SCK PB13 */
  GPIO_InitStruct.GPIO_Pin = OLED_SCK_PIN;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(OLED_SCK_GPIO_PORT, &GPIO_InitStruct);
  /* SDI PB15 */
  GPIO_InitStruct.GPIO_Pin = OLED_SDI_PIN;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(OLED_SDI_GPIO_PORT, &GPIO_InitStruct);

  OLED_CST_H;  // 低電位有效

  /* SPI Init ****************************************************************/
  SPI_InitStruct.SPI_Direction = SPI_Direction_2Lines_FullDuplex;   // Full Duplex
  SPI_InitStruct.SPI_Mode = SPI_Mode_Master;                        // Master Mode
  SPI_InitStruct.SPI_DataSize = SPI_DataSize_8b;                    // Data Size 8 bit
  SPI_InitStruct.SPI_CPOL = SPI_CPOL_High;                          // Transitioned On The Falling Edge
  SPI_InitStruct.SPI_CPHA = SPI_CPHA_2Edge;                         // Latched On the Rising Edge
  SPI_InitStruct.SPI_NSS = SPI_NSS_Soft;                            // Software NSS Signal
  SPI_InitStruct.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;   // fsck = APB1 36MHz / 2 = 18MHz
  SPI_InitStruct.SPI_FirstBit = SPI_FirstBit_MSB;                   // MSB First
  SPI_InitStruct.SPI_CRCPolynomial = 7;
  SPI_Init(OLED_SPIx, &SPI_InitStruct);

  SPI_Cmd(OLED_SPIx, ENABLE);
}

static void OLED_WriteCmd( uint8_t WriteCmd )
{
  OLED_CST_L;
  OLED_DC_L;
  SPI_RW(OLED_SPIx, WriteCmd);
  OLED_CST_H;
}

void OLED_SetWindow( uint8_t StartX, uint8_t StartY, uint8_t EndX, uint8_t EndY )
{
  OLED_WriteCmd(0x15);
  OLED_WriteCmd(StartX);
  OLED_WriteCmd(EndX);
  OLED_WriteCmd(0x75);
  OLED_WriteCmd(StartY);
  OLED_WriteCmd(EndY);
}

void OLED_DrawPixel( uint8_t CoordiX, uint8_t CoordiY, uint16_t Color )
{
  OLED_SetWindow(CoordiX, CoordiY, OLED_W - 1, OLED_H - 1);
  OLED_WriteColor(Color);
}

void OLED_DrawLine( uint8_t StartX, uint8_t StartY, uint8_t EndX, uint8_t EndY, uint16_t Color )
{
  OLED_WriteCmd(0x21);
  OLED_WriteCmd(StartX);
  OLED_WriteCmd(StartY);
  OLED_WriteCmd(EndX);
  OLED_WriteCmd(EndY);
  OLED_WriteCmd(RGB565_R(Color));
  OLED_WriteCmd(RGB565_G(Color));
  OLED_WriteCmd(RGB565_B(Color));
}

void OLED_DrawLineX( uint8_t CoordiX, uint8_t CoordiY, uint8_t Length, uint16_t Color )
{
  OLED_SetWindow(CoordiX, CoordiY, CoordiX+Length-1, CoordiY);

  while(Length--)
    OLED_WriteColor(Color);
}

void OLED_DrawLineY( uint8_t CoordiX, uint8_t CoordiY, uint8_t Length, uint16_t Color )
{
  OLED_SetWindow(CoordiX, CoordiY, CoordiX, CoordiY+Length-1);

  while(Length--)
    OLED_WriteColor(Color);
}

void OLED_DrawCircle( uint8_t CoordiX, uint8_t CoordiY, uint8_t Radius, uint16_t Color )
{
	int16_t x = -Radius;
  int16_t y = 0;
  int16_t err = 2 - 2 * Radius;
  int16_t e2;

  do {
    OLED_DrawPixel(CoordiX - x, CoordiY + y, Color);
    OLED_DrawPixel(CoordiX + x, CoordiY + y, Color);
    OLED_DrawPixel(CoordiX + x, CoordiY - y, Color);
    OLED_DrawPixel(CoordiX - x, CoordiY - y, Color);
    e2 = err;
    if(e2 <= y) {
      err += ++ y * 2 + 1;
      if(-x == y && e2 <= x)
        e2 = 0;
    }
    if(e2 > x)
      err += ++ x * 2 + 1;
  } while(x <= 0);
}

void OLED_PutChar( uint8_t CoordiX, uint8_t CoordiY, uint8_t CharH, uint8_t CharW, const uint8_t *pMatrix, uint16_t FontColor, uint16_t BackColor )
{
  uint8_t tmp = 0;

  for(uint8_t i = 0; i < CharH; i++) {
    tmp = pMatrix[i];
    for(uint8_t j = 0; j < CharW; j++) {
      if(((tmp >> (CharW-1-j)) & 0x01) == 0x01)
        OLED_DrawPixel(CoordiX+j, CoordiY+i, FontColor); // 字符顏色
      else
        OLED_DrawPixel(CoordiX+j, CoordiY+i, BackColor); // 背景顏色
    }
  }
}

void OLED_PutChar16( uint8_t CoordiX, uint8_t CoordiY, uint8_t CharH, uint8_t CharW, const uint16_t *pMatrix, uint16_t FontColor, uint16_t BackColor )
{
  uint16_t tmp = 0;

  for(uint8_t i = 0; i < CharH; i++) {
    tmp = pMatrix[i];
    for(uint8_t j = 0; j < CharW; j++) {
      if(((tmp >> (CharW-1-j)) & 0x0001) == 0x0001)
        OLED_DrawPixel(CoordiX+j, CoordiY+i, FontColor); // 字符顏色
      else
        OLED_DrawPixel(CoordiX+j, CoordiY+i, BackColor); // 背景顏色
    }
  }
}

void OLED_PutChar32( uint8_t CoordiX, uint8_t CoordiY, uint8_t CharH, uint8_t CharW, const uint32_t *pMatrix, uint16_t FontColor, uint16_t BackColor )
{
  uint32_t tmp = 0;

  for(uint8_t i = 0; i < CharH; i++) {
    tmp = pMatrix[i];
    for(uint8_t j = 0; j < CharW; j++) {
      if(((tmp >> (CharW-1-j)) & 0x0001) == 0x0001)
        OLED_DrawPixel(CoordiX+j, CoordiY+i, FontColor); // 字符顏色
      else
        OLED_DrawPixel(CoordiX+j, CoordiY+i, BackColor); // 背景顏色
    }
  }
}

void OLED_PutChar_5x7( uint8_t CoordiX, uint8_t CoordiY, int8_t ChWord, uint16_t FontColor, uint16_t BackColor )
{
  uint8_t Tmp_Char = 0;
  uint8_t i = 0, j = 0;

  for(i = 0; i < 5; i++) {
    Tmp_Char = ASCII_NUM_5x7[ChWord-32][i];
    for(j = 0; j < 7; j++) {
      if(((Tmp_Char >> (6 - j)) & 0x01) == 0x01)
        OLED_DrawPixel(CoordiX+i, CoordiY+7-j, FontColor); // 字符顏色
      else
        OLED_DrawPixel(CoordiX+i, CoordiY+7-j, BackColor); // 背景顏色
    }
  }
}

void OLED_PutStr( uint8_t CoordiX, uint8_t CoordiY, int8_t *ChWord, uint16_t FontColor, uint16_t BackColor )
{
  uint16_t OffsetX = 0;

  while(*ChWord) {
    OLED_PutChar(CoordiX+OffsetX, CoordiY, 12, 6, ASCII_12x6[*ChWord], FontColor, BackColor);
    ChWord++;
    OffsetX += 8;
  }
}

void OLED_PutStr_5x7( uint8_t CoordiX, uint8_t CoordiY, int8_t *ChWord, uint16_t FontColor, uint16_t BackColor )
{
  uint16_t OffsetX = 0;

  while(*ChWord) {
    OLED_PutChar_5x7(CoordiX+OffsetX, CoordiY, *ChWord, FontColor, BackColor);
    ChWord++;
    OffsetX += 6;
  }
}

void OLED_PutNum( uint8_t CoordiX, uint8_t CoordiY, StrType Type, uint8_t Length, uint32_t NumData, uint16_t FontColor, uint16_t BackColor )
{
  int8_t TmpNumber[16] = {0};

  Str_NumToChar(Type, Length, TmpNumber, NumData);
  OLED_PutStr(CoordiX, CoordiY, TmpNumber, FontColor, BackColor);
}
